# leRobot_EuroTechxHongKong

./: .dockerignore  .gitignore  ACTION_REQUIRED.md  COMPLETE_SETUP_MANUAL.md  Dockerfile  FALL_DETECTION_REVIEW.md  HONESTY.md  LICENSE  MANUAL_SETUP_STEPS.md  NEXT_STEPS.md  README.md  ROBOT_SETUP_WSL.md  ROBOT_WEB_CONTROL.md  ROS2_SETUP_GUIDE.md  RUN_THESE_COMMANDS.md  STATUS_AND_NEXT_STEPS.md  WSL_ROS2_GUIDE.md  complete_build.sh  defaults.yaml  docker-compose.yaml  fix_and_build.sh  install_humble.sh  install_ros2_humble_ubuntu20.sh  install_ros2_manual.sh  main.py  package-lock.json  package.json  pixi.toml  requirements.txt  setup_ros2_clean.bat  setup_wsl.bat  setup_wsl_ros2.sh  start-robot.ps1  start-web-control.ps1  test_ros2_packages.sh  upgrade_ubuntu_22.sh  verify_setup.sh
ai/: README.md  check_cameras.py  dosage_counter.py  list_cameras.py  main.py  pill_detect_yolo.py
app/: globals.css  page.tsx
assistant/: .gitignore  README.md  assistant_actions.py  care_context_builder.py  intents.py  llm_client.py  prompts.py
behavior/: README.md
components/: ControlPanel.tsx  ManualControl.tsx  RobotArm.tsx  RobotMiniViewer.tsx
coord_server/: server.c
core/: README.md  event_log.py  modes.py  shared_frame.py
data/: .gitignore  README.md  test_doses_api.json
interaction/: README.md
lib/: jointStore.tsx  joints.ts  nav.ts
manipulation/: README.md
minh/: README.md  __init__.py  medicine_orchestrator.py  medicine_robot_config.yaml  requirements.txt  util.py
perception/: .gitignore  CAMERA_GUIDE.md  README.md  fall_detector.py  pill_detect_yolo.py  preview_camera.py  preview_realsense.py  (+1 more)
ros2_ws/src/so101-ros-physical-ai/so101_patrol/: package.xml  setup.cfg  setup.py
ros2_ws/src/so101-ros-physical-ai/so101_patrol/launch/: patrol.launch.py
ros2_ws/src/so101-ros-physical-ai/so101_patrol/so101_patrol/: patrol_node.py
ros2_ws/src/so101-ros-physical-ai/so101_pick_place/: package.xml  setup.cfg  setup.py
ros2_ws/src/so101-ros-physical-ai/so101_pick_place/launch/: bottle_detector.launch.py  overhead_pick_and_place.launch.py  realsense.launch.py  wrist_pick_and_place.launch.py
ros2_ws/src/so101-ros-physical-ai/so101_pick_place/so101_pick_place/: bottle_detector_node.py  overhead_pick_place_node.py  pick_place_node.py
so_arm_100_isaac_sim/: package.xml  setup.cfg  setup.py
so_arm_100_isaac_sim/config/: isaac_sim_config.yaml
so_arm_100_isaac_sim/launch/: isaac_sim.launch.py
so_arm_100_isaac_sim/scripts/: load_robot.py
so_arm_100_isaac_sim/tests/: test_joint_validation_properties.py
(+269 files in other folders)
