<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>so_arm_100_isaac_sim</name>
  <version>0.1.0</version>
  <description>Isaac Sim integration for the SO-100 5-DOF robot arm.</description>

  <maintainer email="bruk@signalbotics.com">Bruk Gebregziabher</maintainer>
  <maintainer email="rhys.mainwaring@me.com">Rhys Mainwaring</maintainer>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/brukg/SO-100-arm</url>

  <depend>rclpy</depend>
  <depend>controller_manager</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>joint_trajectory_controller</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>so_arm_100_description</exec_depend>
  <exec_depend>so_arm_100_moveit_config</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
