<?xml version="1.0"?>
<package format="3">
  <name>so101_pick_place</name>
  <version>0.1.0</version>
  <description>Wrist-camera guided pick-and-place for SO-101 follower arm</description>
  <maintainer email="sydorov.myron@gmail.com">Myron Sydorov</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
